clusters/dev/cgaas-demo-eks-cluster/hello-world-sachin/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-sachin
  labels:
    name: hello-world-sachin
