clusters/dev/cgaas-demo-eks-cluster/hello-world-sachin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-sachin-deployment
  namespace: dev-sachin
  labels:
    # tier: frontend
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-sachin 
  template:
    metadata:
      labels:
        app: hello-world-sachin
    spec:
      containers:
      - name: hello-world-sachin-container
        image: webappcontainerregistrytest.azurecr.io/sachinayeshmantha/hello-world:13936849086
        ports:
        - containerPort: 5000
      imagePullSecrets: 
      - name: acr-credentials  # Must match the secret name
