clusters/dev/cgaas-demo-eks-cluster/hello-world-sachin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-sachin-service
  namespace: dev-sachin
spec:
  type: NodePort
  selector:
    app: hello-world-sachin
  ports:
    - port: 6000
      targetPort: 5000
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
